# frm

./: LICENSE.txt  README.md  pyproject.toml
music/chr/: 1.chr  2.chr  3.chr
music/frm/: 1.frm  synth1.frm
res/: 1.res  max_interval.res  min_interval.res
src/chord_analyzer/: __about__.py  analyze.py  frm.lark  gen_chr.py  gen_frm.py  play_chr.py  play_frm.py  player.py  tester.py  view.py
tests/: __init__.py
